[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
block-buffer = "0.11.0"
toml = "0.8.19"
toml_edit = "0.22.21"
winnow = "0.7.8"
